# backend-services-roomserver

./: .dockerignore  .gitignore  .gitlab-ci.yml  .markdown_style.rb  .markdownlint.yml  .pre-commit-config.yaml  .rustfmt.toml  .yamllint.yaml  CHANGELOG.md  Cargo.toml  Dockerfile-alpine  Dockerfile-bookworm  Dockerfile-noble  Dockerfile-resolute  Dockerfile-scratch  Dockerfile-trixie  README.md  REUSE.toml  deny.toml  justfile  mkdocs.yml  renovate.json
chat/module/: Cargo.toml
chat/module/src/: chat_id.rs  lib.rs
modules/automod/module/: Cargo.toml
modules/automod/types/: Cargo.toml
modules/chat/module/: Cargo.toml
modules/chat/types/: Cargo.toml  gitlab-ci.yml
modules/e2ee/module/: Cargo.toml
modules/e2ee/types/: Cargo.toml
modules/echo/module/: Cargo.toml
modules/echo/types/: Cargo.toml
modules/excalidraw/module/: Cargo.toml
modules/legal-vote/module/: Cargo.toml
modules/legal-vote/types/: Cargo.toml
modules/livekit/mock/: Cargo.toml
opentalk-roomserver/: Cargo.toml  build.rs
opentalk-roomserver-client/: Cargo.toml
opentalk-roomserver-client/examples/: client.rs
opentalk-roomserver-client/src/: lib.rs  reqwest_client.rs
opentalk-roomserver-client/src/api/: command.rs  event.rs  mod.rs  room.rs  signaling.rs
opentalk-roomserver-client/tests/: integration.rs
opentalk-roomserver-common/: Cargo.toml
opentalk-roomserver-common/src/: application_state.rs  lib.rs  token_store.rs
opentalk-roomserver-common/src/settings/: controller_settings.rs  defaults.rs  livekit.rs  mod.rs  signaling_salt.rs  telemetry.rs
opentalk-roomserver-crypto-provider/: Cargo.toml
opentalk-roomserver-crypto-provider/src/: lib.rs
opentalk-roomserver-dui/: Cargo.toml  README.md  build.rs
opentalk-roomserver-dui/src/: cli.rs  client.rs  main.rs  settings.rs
opentalk-roomserver-dui/src/app/: about.rs  connecting.rs  connection_config.rs  error.rs  error_view.rs  json_edit.rs  mod.rs  settings.rs  shortcuts.rs  signaling.rs  style.rs
opentalk-roomserver-dui/src/settings/: livekit.rs  message_history.rs  mod.rs  room.rs
opentalk-roomserver-module-livekit/: Cargo.toml
opentalk-roomserver-module-livekit/src/: command.rs  lib.rs
opentalk-roomserver-module-livekit/src/loopback/: create_room.rs  force_mute.rs  microphone_restriction.rs  mod.rs  revoke_token.rs  screen_share_permissions.rs
opentalk-roomserver-module-livekit/tests/: force_mute.rs  grant_screen_share.rs  microphone_restrictions.rs  request_popout_token.rs  request_token.rs  revoke_screen_share.rs
opentalk-roomserver-module-ping/: Cargo.toml
opentalk-roomserver-module-ping/src/: lib.rs  ping.rs
opentalk-roomserver-module-ping/tests/: integration.rs
opentalk-roomserver-modules/: Cargo.toml
opentalk-roomserver-modules/src/: lib.rs
opentalk-roomserver-report-generation/: Cargo.toml
opentalk-roomserver-report-generation/src/: lib.rs  report_date_time.rs  report_generation_error.rs  world.rs
opentalk-roomserver-room/: CHANGELOG.md  Cargo.toml
opentalk-roomserver-room/src/: lib.rs  metrics.rs  orchestrator_metrics.rs  registry.rs  room_map.rs
opentalk-roomserver-room/src/message_router/: message.rs  mod.rs  participant_connection.rs  rate_limit.rs
opentalk-roomserver-room/src/mocking/: mock_module.rs  mock_socket.rs  mod.rs  participant.rs  room.rs  socket.rs
opentalk-roomserver-room/src/signaling/: dyn_module_context.rs  mod.rs  module_initializer.rs
opentalk-roomserver-room/src/storage/: controller_asset_storage.rs  controller_module_storage.rs  memory_asset_storage.rs  memory_file_storage.rs  memory_module_storage.rs  mod.rs
opentalk-roomserver-room/src/task/: closing.rs  context.rs  core.rs  fs_storage.rs  handle.rs  idle_timeout.rs  livekit.rs  memory_file_storage.rs  memory_module_storage.rs  mod.rs  moderation.rs  timeout.rs  waiting_room.rs
opentalk-roomserver-room/tests/: breakout.rs  core.rs  integration.rs  waiting_room.rs
opentalk-roomserver-signaling/: Cargo.toml
opentalk-roomserver-signaling/src/: banned_participant.rs  core_command.rs  event_origin.rs  instruction.rs  internal_module_message.rs  lib.rs  localization.rs  loopback.rs  module_context.rs  participant_filter.rs  participant_state.rs  room_info.rs  signaling_event.rs  signaling_module.rs  storage.rs  storage_quota.rs  waiting_participant.rs
opentalk-roomserver-signaling/src/breakout/: breakout_config.rs  command.rs  event.rs  mod.rs  module_data.rs
opentalk-roomserver-signaling/src/join/: connection_info.rs  event_info.rs  mod.rs  participant.rs
opentalk-roomserver-signaling/src/module_resources/: mod.rs  provider.rs
opentalk-roomserver-signaling/src/storage/: mod.rs  provider.rs
opentalk-roomserver-signaling/tests/: integration.rs
opentalk-roomserver-types/: Cargo.toml
opentalk-roomserver-types-signaling-chat/: Cargo.toml
opentalk-roomserver-types-signaling-chat/src/: lib.rs
opentalk-roomserver-types-signaling-chat/src/command/: chat_command.rs
opentalk-roomserver-types-signaling-chat/src/event/: chat_enabled.rs  chat_event.rs  error.rs  message_sent.rs
opentalk-roomserver-types-signaling-chat/src/peer_state/: mod.rs
opentalk-roomserver-types-signaling-chat/src/state/: chat_state.rs  mod.rs  stored_message.rs
opentalk-roomserver-types/src/: breakout_id.rs  client_parameters.rs  connection_id.rs  core_event.rs  device_id.rs  disconnect_reason.rs  duration_ms.rs  error.rs  kick_reason.rs  lib.rs  module_settings.rs  public_user_profile.rs  rate_limit.rs  room_action.rs  room_info.rs  room_kind.rs  room_parameters.rs  room_parameters_patch.rs  shared_json.rs  shared_raw_json.rs  signaling.rs  tariff_details.rs
opentalk-roomserver-types/src/api/: mod.rs  roomserver_access.rs  token_request_body.rs  token_response.rs
opentalk-roomserver-types/src/breakout/: breakout_id.rs  (+5 more)
opentalk-roomserver-web-api/: Cargo.toml
opentalk-roomserver-web-api/src/: lib.rs  livekit_proxy.rs
opentalk-roomserver/src/: main.rs  metrics.rs  modules.rs  settings.rs  tcp_multi_listener.rs  trace.rs
opentalk-web-api/: Cargo.toml
opentalk-web-api/src/: lib.rs
timer/module/: Cargo.toml
(+646 files in other folders)
