# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>
# SPDX-FileCopyrightText: Wolfgang Silbermayr <w.silbermayr@opentalk.eu>

[workspace]
members = [
  "modules/automod/module",
  "modules/automod/types",
  "modules/chat/module",
  "modules/chat/types",
  "modules/e2ee/module",
  "modules/e2ee/types",
  "modules/echo/module",
  "modules/echo/types",
  "modules/livekit/mock",
  "modules/livekit/module",
  "modules/livekit/types",
  "modules/meeting-notes/module",
  "modules/meeting-notes/types",
  "modules/meeting-report/module",
  "modules/meeting-report/types",
  "modules/moderation/module",
  "modules/moderation/types",
  "modules/polls/module",
  "modules/polls/types",
  "modules/raise-hands/module",
  "modules/raise-hands/types",
  "modules/shared_folder/module",
  "modules/shared_folder/types",
  "modules/timer/module",
  "modules/timer/types",
  "opentalk-roomserver",
  "opentalk-roomserver-client",
  "opentalk-roomserver-dui",
  "opentalk-roomserver-report-generation",
  "opentalk-roomserver-room",
  "opentalk-roomserver-types",
  "opentalk-roomserver-web-api",
]
resolver = "2"

[workspace.package]
authors = [
  "OpenTalk Team <mail@opentalk.eu>",

  "Albrecht Weiche <a.weiche@opentalk.eu>",
  "Maximilian Allies <m.allies@opentalk.eu>",
  "Wolfgang Silbermayr <w.silbermayr@opentalk.eu>",
]
homepage = "https://opentalk.eu/"
license = "EUPL-1.2"
repository = "https://gitlab.opencode.de/opentalk/roomserver"
version = "0.0.6-dev"

[workspace.dependencies]
opentalk-roomserver-client = { path = "opentalk-roomserver-client", version = "0.0.6-dev" }
opentalk-roomserver-common = { path = "opentalk-roomserver-common", version = "0.0.6-dev" }
opentalk-roomserver-mocking-livekit = { path = "modules/livekit/mock", version = "0.0.6-dev" }
opentalk-roomserver-module-automod = { path = "modules/automod/module", version = "0.0.6-dev" }
opentalk-roomserver-module-chat = { path = "modules/chat/module", version = "0.0.6-dev" }
opentalk-roomserver-module-e2ee = { path = "modules/e2ee/module", version = "0.0.6-dev" }
opentalk-roomserver-module-echo = { path = "modules/echo/module", version = "0.0.6-dev" }
opentalk-roomserver-module-livekit = { path = "modules/livekit/module", version = "0.0.6-dev" }
opentalk-roomserver-module-meeting-notes = { path = "modules/meeting-notes/module", version = "0.0.6-dev" }
opentalk-roomserver-module-meeting-report = { path = "modules/meeting-report/module", version = "0.0.6-dev" }
opentalk-roomserver-module-moderation = { path = "modules/moderation/module", version = "0.0.6-dev" }
opentalk-roomserver-module-polls = { path = "modules/polls/module", version = "0.0.6-dev" }
opentalk-roomserver-module-raise-hands = { path = "modules/raise-hands/module", version = "0.0.6-dev" }
opentalk-roomserver-module-shared-folder = { path = "modules/shared_folder/module", version = "0.0.6-dev" }
opentalk-roomserver-module-subroom-audio = { path = "modules/subroom-audio/module", version = "0.0.6-dev" }
opentalk-roomserver-module-timer = { path = "modules/timer/module", version = "0.0.6-dev" }
opentalk-roomserver-report-generation = { path = "opentalk-roomserver-report-generation", version = "0.0.6-dev" }
opentalk-roomserver-room = { path = "opentalk-roomserver-room", version = "0.0.6-dev" }
opentalk-roomserver-signaling = { path = "opentalk-roomserver-signaling", version = "0.0.6-dev" }
opentalk-roomserver-types = { path = "opentalk-roomserver-types", version = "0.0.6-dev", features = [
  "utoipa",
] }
opentalk-roomserver-types-automod = { path = "modules/automod/types", version = "0.0.6-dev" }
opentalk-roomserver-types-chat = { path = "modules/chat/types", version = "0.0.6-dev" }
opentalk-roomserver-types-e2ee = { path = "modules/e2ee/types", version = "0.0.6-dev" }
opentalk-roomserver-types-echo = { path = "modules/echo/types", version = "0.0.6-dev" }
opentalk-roomserver-types-livekit = { path = "modules/livekit/types", version = "0.0.6-dev" }
opentalk-roomserver-types-meeting-notes = { path = "modules/meeting-notes/types", version = "0.0.6-dev" }
opentalk-roomserver-types-meeting-report = { path = "modules/meeting-report/types", version = "0.0.6-dev" }
opentalk-roomserver-types-moderation = { path = "modules/moderation/types", version = "0.0.6-dev" }
opentalk-roomserver-types-polls = { path = "modules/polls/types", version = "0.0.6-dev" }
opentalk-roomserver-types-raise-hands = { path = "modules/raise-hands/types", version = "0.0.6-dev" }
opentalk-roomserver-types-shared-folder = { path = "modules/shared_folder/types", version = "0.0.6-dev" }
opentalk-roomserver-types-subroom-audio = { path = "modules/subroom-audio/types", version = "0.0.6-dev" }
opentalk-roomserver-types-timer = { path = "modules/timer/types", version = "0.0.6-dev" }
opentalk-roomserver-web-api = { path = "opentalk-roomserver-web-api", version = "0.0.6-dev" }
opentalk-types-api-v1 = { version = "0.40.0", features = ["axum"] }
opentalk-types-common = { version = "0.36.0", features = ["serde", "utoipa"] }
opentalk-types-signaling = { version = "0.38.0", features = [
  "serde",
  "utoipa",
] }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.1" }
axum-prometheus = "0.9.0"
blake3 = "1.8"
bytes = "1.10.1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
derive_more = { version = "2", features = ["display"] }
dirs = "6.0.0"
ecow = "0.2"
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = { version = "0.32.0", default-features = false }
egui_json_tree = "0.13.0"
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.3.1"
http-request-derive = "0.4.0"
http-request-derive-client = "0.1.0"
http-request-derive-client-reqwest = "0.2.0"
insta = "1.43.1"
livekit = "0.7"
livekit-api = "0.4"
livekit-protocol = "0.4.0"
livekit-runtime = { version = "0.4", default-features = false }
log = "0.4.22"
opentalk-etherpad-client = { version = "0.3", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-version = "0.2.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = [
  "rt-tokio-current-thread",
] }
pdf-extract = "0.9"
pretty_assertions = "1.4.1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"] }
serde_path_to_error = "0.1.16"
service-probe = "0.2.0"
test-log = { version = "0.2.17", default-features = false }
testcontainers = "0.25.0"
thiserror = "2.0"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-tungstenite = "0.27.0"
tokio-util = "0.7.15"
tower = "0.5"
tower-http = "0.6.2"
tracing = "0.1"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
] }
tungstenite = "0.27.0"
typst = "0.13"
typst-kit = { version = "0.13", default-features = false, features = [
  "embed-fonts",
] }
typst-pdf = "0.13"
url = "2.5.2"
utoipa = { version = "5.3.1", features = ["yaml"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = "1"
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
vergen-gix = "1"
yaml-rust2 = "0.10"
