# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>
# SPDX-FileCopyrightText: Wolfgang Silbermayr <w.silbermayr@opentalk.eu>

[workspace]
default-members = ["opentalk-roomserver"]
members = [
  "modules/*/module",
  "modules/*/test-util",
  "modules/*/types",
  "modules/livekit/proxy",
  "opentalk-roomserver",
  "opentalk-roomserver-client",
  "opentalk-roomserver-crypto-provider",
  "opentalk-roomserver-dui",
  "opentalk-roomserver-modules",
  "opentalk-roomserver-room",
  "opentalk-roomserver-types",
  "opentalk-roomserver-web-api",
]
resolver = "2"

[workspace.package]
authors = [
  "OpenTalk Team <mail@opentalk.eu>",

  "Albrecht Weiche <a.weiche@opentalk.eu>",
  "Maximilian Allies <m.allies@opentalk.eu>",
  "Wolfgang Silbermayr <w.silbermayr@opentalk.eu>",
]
homepage = "https://opentalk.eu/"
license = "EUPL-1.2"
repository = "https://gitlab.opencode.de/opentalk/roomserver"
version = "0.0.41-alpha"

[workspace.dependencies]
opentalk-roomserver-client = { path = "opentalk-roomserver-client", version = "0.0.41-alpha" }
opentalk-roomserver-common = { path = "opentalk-roomserver-common", version = "0.0.41-alpha" }
opentalk-roomserver-crypto-provider = { path = "opentalk-roomserver-crypto-provider", version = "0.0.41-alpha" }
opentalk-roomserver-livekit-proxy = { path = "modules/livekit/proxy", version = "0.0.41-alpha" }
opentalk-roomserver-module-automod = { path = "modules/automod/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-chat = { path = "modules/chat/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-e2ee = { path = "modules/e2ee/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-echo = { path = "modules/echo/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-excalidraw = { path = "modules/excalidraw/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-legal-vote = { path = "modules/legal-vote/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-livekit = { path = "modules/livekit/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-meeting-notes = { path = "modules/meeting-notes/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-meeting-report = { path = "modules/meeting-report/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-moderation = { path = "modules/moderation/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-polls = { path = "modules/polls/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-raise-hands = { path = "modules/raise-hands/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-reaction = { path = "modules/reaction/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-recording = { path = "modules/recording/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-shared-folder = { path = "modules/shared-folder/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-subroom-audio = { path = "modules/subroom-audio/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-timer = { path = "modules/timer/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-training-participation-report = { path = "modules/training-participation-report/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-transcription = { path = "modules/transcription/module", version = "0.0.41-alpha" }
opentalk-roomserver-module-whiteboard = { path = "modules/whiteboard/module", version = "0.0.41-alpha" }
opentalk-roomserver-modules = { path = "opentalk-roomserver-modules", version = "0.0.41-alpha" }
opentalk-roomserver-room = { path = "opentalk-roomserver-room", version = "0.0.41-alpha" }
opentalk-roomserver-signaling = { path = "opentalk-roomserver-signaling", version = "0.0.41-alpha" }
opentalk-roomserver-test-util-livekit = { path = "modules/livekit/test-util", version = "0.0.41-alpha" }
opentalk-roomserver-types = { path = "opentalk-roomserver-types", version = "0.0.41-alpha", features = [
  "utoipa",
] }
opentalk-roomserver-types-automod = { path = "modules/automod/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-chat = { path = "modules/chat/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-e2ee = { path = "modules/e2ee/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-echo = { path = "modules/echo/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-excalidraw = { path = "modules/excalidraw/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-legal-vote = { path = "modules/legal-vote/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-livekit = { path = "modules/livekit/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-meeting-notes = { path = "modules/meeting-notes/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-meeting-report = { path = "modules/meeting-report/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-moderation = { path = "modules/moderation/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-polls = { path = "modules/polls/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-raise-hands = { path = "modules/raise-hands/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-reaction = { path = "modules/reaction/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-recording = { path = "modules/recording/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-shared-folder = { path = "modules/shared-folder/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-subroom-audio = { path = "modules/subroom-audio/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-timer = { path = "modules/timer/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-training-participation-report = { path = "modules/training-participation-report/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-transcription = { path = "modules/transcription/types", version = "0.0.41-alpha" }
opentalk-roomserver-types-whiteboard = { path = "modules/whiteboard/types", version = "0.0.41-alpha" }
opentalk-roomserver-web-api = { path = "opentalk-roomserver-web-api", version = "0.0.41-alpha" }
opentalk-service-auth = { version = "0.2", default-features = false }
opentalk-types-api-internal = { version = "0.2", features = ["axum"] }
opentalk-types-common = { version = "0.44.0", features = ["serde", "utoipa"] }
opentalk-types-signaling = { version = "0.45", features = ["serde", "utoipa"] }

actix-ws = "0.4"
anstream = "1"
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.1" }
axum-prometheus = "0.10.0"
basen = "=0.1.0"
blake3 = "1.8"
bytes = "1.10.1"
chrono = "0.4"
chrono-tz = "0.10"
cidr = { version = "0.3", features = ["no_unsafe", "serde"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
derive_more = { version = "2", features = ["display"] }
dirs = "6.0.0"
eframe = "0.34.0"
egui = "0.34.0"
egui_extras = { version = "0.34.0", default-features = false }
egui_json_tree = "0.15.0"
env_logger = "0.11.8"
fluent-langneg = "0.14"
futures = "0.3.31"
http = "1.3.1"
icu_locid = "1"
insta = "1.43.1"
itertools = "0.15.0"
json-patch = "4.0"
jsonwebtoken = { version = "10", default-features = false }
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
livekit-api = { version = "0.5", features = ["rustls-tls-native-roots"] }
livekit-protocol = "0.7"
log = "0.4.22"
mockito = "1.7.0"
opentalk-etherpad-client = { version = "0.6", default-features = false }
opentalk-orchestrator-client = { version = "0.8", features = [
  "roomserver-service",
] }
opentalk-report-generation = "0.2"
opentalk-transcription-web-api = "0.1"
opentalk-version = "0.4.0"
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.0", features = [
  "rt-tokio-current-thread",
] }
owo-colors = "4.3"
pdf-extract = "0.12"
pretty_assertions = "1.4.1"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "http2",
  "json",
  "rustls",
] }
rustls = { version = "0.23", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = { version = "1.0.125", features = ["raw_value"] }
serde_path_to_error = "0.1.16"
service-probe = "0.4.0"
service-probe-client = "0.4.0"
sysinfo = "0.39"
test-log = { version = "0.2.17", default-features = false }
testcontainers = "0.27.0"
thiserror = "2.0"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-stream = "0.1"
tokio-tungstenite = "0.29.0"
tokio-util = "0.7.15"
toml = "1.0"
tower = "0.5"
tower-http = "0.6.2"
tracing = "0.1"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
] }
tungstenite = "0.29.0"
url = "2.5.2"
utoipa = { version = "5.3.1", features = ["yaml"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = "1"
yaml-rust2 = "0.11"

[workspace.lints.clippy]
self_named_module_files = "deny"
