# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2021"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-client"
repository.workspace = true
version.workspace = true

[dependencies]
http-request-derive.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true

[dev-dependencies]
http-request-derive-client.workspace = true
http-request-derive-client-reqwest.workspace = true
opentalk-types-api-v1.workspace = true
tokio-test.workspace = true
url.workspace = true

[features]
default = ["default-tls", "reqwest/default"]

default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-no-provider = ["reqwest/rustls-tls-no-provider"]

rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-manual-roots-no-provider = [
  "reqwest/rustls-tls-manual-roots-no-provider",
]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[package.metadata.cargo-machete]
ignored = [
  # Used in doctests
  "http-request-derive-client",
  "http-request-derive-client-reqwest",
  "opentalk-types-api-v1",
  "tokio-test",
  "url",
]
