# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
edition = "2021"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-client"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
http-request-derive.workspace = true
http-request-derive-client.workspace = true
http-request-derive-client-reqwest.workspace = true
log.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
opentalk-types-api-v1.workspace = true
tokio.workspace = true
tokio-test.workspace = true
url.workspace = true

[features]
default = ["default-tls", "reqwest/default"]

default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-no-provider = ["reqwest/rustls-tls-no-provider"]

rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-manual-roots-no-provider = [
  "reqwest/rustls-tls-manual-roots-no-provider",
]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[package.metadata.cargo-machete]
ignored = [
  # Used in doctests
  "opentalk-types-api-v1",
  "tokio-test",
]
