# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "Opentalk RoomServer Client"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-client"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
http-request-derive.workspace = true
http-request-derive-client.workspace = true
http-request-derive-client-reqwest.workspace = true
log.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-roomserver-types-automod.workspace = true
opentalk-roomserver-types-chat.workspace = true
opentalk-roomserver-types-e2ee.workspace = true
opentalk-roomserver-types-echo.workspace = true
opentalk-roomserver-types-livekit.workspace = true
opentalk-roomserver-types-meeting-notes.workspace = true
opentalk-roomserver-types-meeting-report.workspace = true
opentalk-roomserver-types-moderation.workspace = true
opentalk-roomserver-types-polls.workspace = true
opentalk-roomserver-types-raise-hands.workspace = true
opentalk-roomserver-types-shared-folder.workspace = true
opentalk-roomserver-types-subroom-audio.workspace = true
opentalk-roomserver-types-timer.workspace = true
opentalk-roomserver-types-whiteboard.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
tokio.workspace = true
url.workspace = true
