# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>

[package]
authors.workspace = true
description = "OpenTalk RoomServer Module Ping"
edition = "2024"
homepage.workspace = true
license.workspace = true
name = "opentalk-roomserver-module-ping"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
opentalk-roomserver-signaling.workspace = true
opentalk-roomserver-types.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
opentalk-roomserver-room = { workspace = true, features = ["mock"] }
pretty_assertions.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
